<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lessons"
            android:icon="@drawable/ic_fa_graduation_cap"
            android:title="@string/raspzan" />
        <item
            android:id="@+id/nav_teachers"
            android:icon="@drawable/ic_fa_id_card"
            android:title="@string/raspprep" />
        <item
            android:id="@+id/nav_session"
            android:icon="@drawable/ic_fa_layer_group_solid"
            android:title="@string/raspses" />
        <item
            android:id="@+id/nav_manage"
            android:icon="@drawable/ic_fa_leanpub_brands"
            android:title="@string/ved" />
    </group>

    <item android:title="Прочее">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_fa_cog_solid"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_about"
                android:icon="@drawable/ic_fa_info_circle"
                android:title="@string/aboutprog" />
        </menu>
    </item>

</menu>
